# gw2api

./: .gitignore  .travis.yml  Cargo.toml  README.md
gw2api/: Cargo.toml  LICENSE-MIT
gw2api-core/: Cargo.toml  README.md
gw2api-core/src/: client.rs  endpoint.rs  error.rs  lib.rs
gw2api-derive/: Cargo.toml
gw2api-derive/src/: lib.rs  main.rs
gw2api/examples/: request_build.rs
gw2api/src/: lib.rs
gw2api/src/v1/: build.rs  colors.rs  continents.rs  event_details.rs  event_names.rs  files.rs  guild_details.rs  item_details.rs  items.rs  map_floor.rs  map_names.rs  maps.rs  mod.rs  recipe_details.rs  recipes.rs  skin_details.rs  skins.rs  world_names.rs
gw2api/src/v1/wvw/: match_details.rs  matches.rs  mod.rs  objective_names.rs
gw2api/src/v2/: build.rs  mod.rs  tokeninfo.rs  worlds.rs
gw2api/src/v2/pvp/: amulets.rs  games.rs  heroes.rs  mod.rs  ranks.rs  seasons.rs  standings.rs
gw2api/tests/: common.rs  v1.rs  v2.rs
gw2api/tests/json/v1/: build.json  colors.json  continents.json  items.json  map_floor.json  map_names.json  maps.json  recipes.json  skins.json
gw2api/tests/json/v1/item_details/: armor.json  back.json  consumable_food.json  consumable_generic_with_effect.json  consumable_generic_without_effect.json  consumable_others.json  consumable_recipe.json  consumable_untransmutation.json  gizmo.json  mini_pet.json  trinket.json  trophy.json  upgrade_component.json  utility_appearancechange.json  utility_contractnpc.json  utility_halloween.json  utility_upgraderemoval.json
gw2api/tests/json/v1/wvw/: objective_names.json
gw2api/tests/json/v2/: achievements.json  colors.json  dungeons.json  files.json  gliders.json  itemstats.json  legends.json  materials.json  minis.json  specializations.json  stories.json
gw2api/tests/json/v2/account/: raids.json
gw2api/tests/json/v2/achievements/: categories.json  daily.json
gw2api/tests/json/v2/backstory/: answers.json
gw2api/tests/json/v2/commerce/: listings.json
gw2api/tests/json/v2/commerce/exchange/: gems.json
gw2api/tests/json/v2/emblem/: foregrounds.json
gw2api/tests/json/v2/guild/: permissions.json  upgrades.json
gw2api/tests/json/v2/home/: cats.json  nodes.json
gw2api/tests/json/v2/mounts/: skins.json
gw2api/tests/json/v2/pvp/: heroes.json  seasons.json
gw2api/tests/json/v2/recipes/: search.json
gw2api/tests/json/v2/stories/: seasons.json
gw2api/tests/json/v2/wvw/: abilities.json  matches.json  objectives.json
gw2api/util/: gw2tojson.py  timesaver.py
src/: attributes.rs  client.rs  error.rs  lib.rs  utils.rs
src/api/: build.rs  mod.rs  tokeninfo.rs
src/api/pvp/: amulets.rs
src/v1/: build.rs  colors.rs  continents.rs  event_details.rs  event_names.rs  files.rs  guild_details.rs  item_details.rs  items.rs  map_floor.rs  map_names.rs  maps.rs  mod.rs  recipe_details.rs  recipes.rs  skin_details.rs  skins.rs  world_names.rs
src/v1/wvw/: match_details.rs  matches.rs  mod.rs  objective_names.rs
src/v2/: build.rs  mod.rs  tokeninfo.rs
src/v2/pvp/: amulets.rs  games.rs  heroes.rs  mod.rs  ranks.rs
tests/: common.rs  v1.rs  v2.rs
tests/json/v1/: event_details.json  guild_details.json  recipe_details.json  skin_details.json  world_names.json
tests/json/v1/item_details/: bag.json  consumable_booze.json  consumable_dye.json  consumable_immediate.json  (+6 more)
tests/json/v2/: build.json  currencies.json  dailycrafting.json  emotes.json  finishers.json  items.json  mapchests.json  maps.json  masteries.json  novelties.json  outfits.json  pets.json  professions.json  quaggans.json  quests.json  races.json  raids.json  recipes.json  skills.json  skins.json  titles.json  tokeninfo.json  traits.json  worldbosses.json  worlds.json  wvw.json
util/: gw2tojson.py
(+12 files in other folders)
