[package]
name = "gw2api"
version = "0.1.0"
authors = ["CuriouslyCurious <thecuriouslycurious@protonmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
reqwest = "0.9"
