[package]
name = "gw2api"
version = "0.2.0"
authors = ["CuriouslyCurious <thecuriouslycurious@protonmail.com>"]
edition = "2018"
publish = true

description = "A sort-of well-documented and WIP wrapper over the Guild Wars 2 API"
readme = "README.md"
keywords = ["Guild Wars 2", "GW2", "wrapper", "api"]
categories = ["api-bindings"]

license = "Apache-2.0 OR MIT"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
ureq = { version = "1.1.1", features = ["json"] }
